# lifelog

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  COLLABORATION.md  CONTRIBUTING.md  FIRST_ISSUES.md  INSTALL.md  LICENSE  MANIFEST.in  PI_OPTIMIZATION.md  PYPI_SETUP.md  README.md  RELEASE.md  SECURITY.md  api-docker.md  get_path.py  github_auth  github_auth.pub  notes.md  notes.txt  pyproject.toml  release-notes.md  requirements.txt  seed_test.py  setup.cfg  setup.py  temp_requirements.txt  test.py
.claude/: settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security.yml
_reference/: MDevG.md  improvements.md  inputRef.md  moduleDef.md  module_template.py  notes.md  old_reporting.py
lifelog/: app.py  config.toml  first_time_run.py  llog.py  pyproject.toml  requirements.txt  ui.py  ui_views.py
lifelog/api/: auth.py  errors.py  sync_api.py  task_api.py  time_api.py  track_api.py
lifelog/commands/: __init__.py  api_module.py  debug.py  environmental_sync.py  habit.py  hero.py  log.py  metric.py  metrics.py  report.py  start_day.py  summary.py  task.py  task_module.py  test.py  time.py  time_module.py  track.py  track_module.py
lifelog/commands/utils/: environmental.py  feedback.py  get_quotes.py  goal_util.py  insight_engine.py  report_utils.py  shared_options.py  shared_utils.py  tracker_utils.py
lifelog/commands/utils/db/: database_manager.py  environment_repository.py  models.py  report_repository.py  task_repository.py  time_repository.py  track_repository.py
lifelog/commands/utils/reporting/: clinical_insight_engine.py  insight_engine.py  summary.py  time_reports.py  visualization.py
lifelog/commands/utils/reporting/analytics/: correlation.py  descriptive.py  diagnostics.py  prediction.py  prescriptive.py  report_utils.py
lifelog/config/: config.toml  config_manager.py  cron_manager.py  schedule_manager.py  send_email_trigger.py
lifelog/tests/: test_tasks.py
lifelog/ui_views/: forms.py  hero_ui.py  popups.py  reports_ui.py  start_day_ui.py  tasks_ui.py  time_ui.py  trackers_ui.py  ui_helpers.py
lifelog/utils/: cli_decorators.py  cli_enhanced.py  core_utils.py  db_helper.py  encrypt.py  error_handler.py  gamification_seed.py  get_quotes.py  goal_util.py  hooks.py  log_utils.py  notifications.py  pi_optimizer.py  shared_options.py  shared_utils.py
lifelog/utils/db/: __init__.py  base_repository.py  database_manager.py  db_helper.py  environment_repository.py  environmental.py  feedback_repository.py  gamify_repository.py  models.py  report_repository.py  task_repository.py  task_repository_new.py  time_repository.py  track_repository.py
lifelog/utils/reporting/: clinical_insight_engine.py  comprehensive_reports.py  insight_engine.py  summary.py  time_reports.py  visualization.py
lifelog/utils/reporting/analytics/: correlation.py  descriptive.py  diagnostics.py  prediction.py  prescriptive.py  report_utils.py
pi_test_env/: pyvenv.cfg
scripts/: create-release.py
tests/: conftest.py  test_api.py  test_clinical_insight_engine.py  test_config_manager.py  test_database.py  test_database_manager.py  test_db_helper_and_sync_state.py  test_environmental_sync.py  test_insight_engine.py  test_models.py  test_popups.py  test_reports_ui.py  test_scheduler.py  test_summary_and_report.py  test_task_cli.py  test_task_repository.py  test_tasks_ui.py  test_time_cli.py  test_time_repository.py  test_time_ui.py  test_track_cli.py  test_track_repository.py  test_trackers_ui.py  test_ui_helpers.py
