[project]
name = "lifelog"
version = "0.1.0"
description = "A terminal-based health, habit, task, life tracker."
authors = [{ name = "Zach McKinnon" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # TODO: Consider making heavy dependencies optional for Raspberry Pi Zero 2W
    # numpy, scipy, pandas can be memory intensive on low-power devices
    # Universal
    "typer",
    "rich",
    "pyfiglet",
    "termplotlib",
    "numpy",
    "requests",
    "scipy",
    "tomlkit",
    "pandas",
    "toml",
    "plotille",
    "plotext",
    "pydantic",
    "flask",
    "npyscreen",
    "pyyaml", 
    "gunicorn",
    "pendulum>=2.0",

    # Windows only
    "windows-curses; sys_platform == 'win32'",
    "pywin32; sys_platform == 'win32'",
]
# Updated Python requirement for better Raspberry Pi compatibility
# Python 3.9+ has better ARM support and performance optimizations
requires-python = ">=3.9"

[project.scripts]
llog = "lifelog.llog:lifelog_app"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lifelog*"]

[tool.setuptools.package-data]
"lifelog" = ["config/*.toml", "*.py"] 
