[project]
name = "lifelog"
version = "0.1.0"
description = "A terminal-based health, habit, task, life tracker."
authors = [{ name = "Zach McKinnon" }]
readme = "README.md"
license = "MIT"
dependencies = [
    # TODO: Consider making heavy dependencies optional for Raspberry Pi Zero 2W
    "typer",
    "rich",
    "pyfiglet",
    "termplotlib",
    "numpy>=1.20.0,<2.0",
    "requests",
    "scipy",
    "tomlkit",
    "pandas>=1.3.0,<2.0",  # Keep pandas 1.x for compatibility across all platforms
    "toml",
    "plotille",
    "plotext",
    "pydantic",
    "flask",
    "npyscreen",
    "pyyaml", 
    "gunicorn",
    "pendulum>=2.0",
    "psutil>=5.0",  # For Pi optimization and system monitoring

    # Windows only
    "windows-curses; sys_platform == 'win32'",
    "pywin32; sys_platform == 'win32'",
]
# Updated Python requirement for better Raspberry Pi compatibility
# Python 3.9+ has better ARM support and performance optimizations
requires-python = ">=3.9"

[project.optional-dependencies]
# Lightweight version for ARM devices with limited resources
arm = [
    "polars",  # Lightweight pandas alternative
]
# Full analytics for powerful machines
analytics = [
    "pandas>=2.0",
    "matplotlib",
    "seaborn",
]

[project.scripts]
llog = "lifelog.llog:lifelog_app"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lifelog*"]

[tool.setuptools.package-data]
"lifelog" = ["config/*.toml", "*.py"] 
